-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.12.5
-
None
-
CentOS 7.9, Lustre 2.12.7 on clients
-
3
-
9223372036854775807
This morning, we hit the following problem (new for us) on Fir (2.12.5 servers, 2.12.7 clients):
# rmdir /scratch/users/ragoglia/csATAC/For_Rachel rmdir: failed to remove ‘/scratch/users/ragoglia/csATAC/For_Rachel’: Invalid argument
More info on this directory:
[root@fir-rbh01 ~]# ls -lisa /scratch/users/ragoglia/csATAC/For_Rachel total 8 198162765779658672 4 drwxr-xr-x 2 atrev wjg 4096 Oct 20 02:58 . 198162765779658671 4 drwxrwxr-x+ 3 ragoglia hbfraser 4096 Sep 5 2019 .. [root@fir-rbh01 ~]# lfs getdirstripe /scratch/users/ragoglia/csATAC/For_Rachel lmv_stripe_count: 0 lmv_stripe_offset: 2 lmv_hash_type: none [root@fir-rbh01 ~]# lfs project -d /scratch/users/ragoglia/csATAC/For_Rachel 259557 P /scratch/users/ragoglia/csATAC/For_Rachel [root@fir-rbh01 ~]# lfs getdirstripe /scratch/users/ragoglia/csATAC lmv_stripe_count: 0 lmv_stripe_offset: 2 lmv_hash_type: none [root@fir-rbh01 ~]# rmdir /scratch/users/ragoglia/csATAC/For_Rachel rmdir: failed to remove ‘/scratch/users/ragoglia/csATAC/For_Rachel’: Invalid argument
MDS logs show:
Nov 03 09:52:49 fir-md1-s3 kernel: LustreError: 103307:0:(qsd_handler.c:884:qsd_op_begin()) fir-MDT0002: more than 8 qids enforced for a transaction? Nov 03 10:10:09 fir-md1-s3 kernel: LustreError: 103781:0:(qsd_handler.c:884:qsd_op_begin()) fir-MDT0002: more than 8 qids enforced for a transaction? Nov 03 10:10:35 fir-md1-s3 kernel: LustreError: 103781:0:(qsd_handler.c:884:qsd_op_begin()) fir-MDT0002: more than 8 qids enforced for a transaction? Nov 03 10:10:52 fir-md1-s3 kernel: LustreError: 103697:0:(qsd_handler.c:884:qsd_op_begin()) fir-MDT0002: more than 8 qids enforced for a transaction? Nov 03 10:15:55 fir-md1-s3 kernel: LustreError: 103721:0:(qsd_handler.c:884:qsd_op_begin()) fir-MDT0002: more than 8 qids enforced for a transaction?
Which looks like LU-12388
My colleague found a workaround for rmdir: set project ID 0 before rmdir, and it worked:
# lfs project -d /scratch/users/ragoglia/csATAC/For_Rachel/
259557 P /scratch/users/ragoglia/csATAC/For_Rachel/
# lfs project -p 0 /scratch/users/ragoglia/csATAC/For_Rachel/
# lfs project -d /scratch/users/ragoglia/csATAC/For_Rachel/
0 P /scratch/users/ragoglia/csATAC/For_Rachel/
# rmdir /scratch/users/ragoglia/csATAC/For_Rachel/
#
I believe this is the only occurrence we've seen of this issue so far. Let me know if additional logs would be helpful the next time we hit this.
- is related to
-
LU-12388
expand QUOTA_MAX_TRANSIDS for Project Quota?
-
- Closed
-